refactored with hibernate/jpa and finished service layer for all 5 components

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
   <servlet>
     <servlet-name>tester</servlet-name>
-    <servlet-class>com.myforum.messaging.tester</servlet-class>
+    <servlet-class>com.myforum.tester</servlet-class>
   </servlet>
 
   <servlet-mapping>
