--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,31 @@
        <artifactId>hibernate-core</artifactId>
        <version>5.4.2.Final</version>
     </dependency>
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-server</artifactId>
+      <version>1.19</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-servlet</artifactId>
+      <version>1.19</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>1.19</version>
+    </dependency>
+    <dependency>
+     <groupId>com.sun.jersey</groupId>
+     <artifactId>jersey-json</artifactId>
+     <version>1.19</version>
+    </dependency>
+    <dependency>
+        <groupId>com.sun.jersey.contribs</groupId>
+        <artifactId>jersey-multipart</artifactId>
+        <version>1.19</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>myforum</finalName>
@@ -52,7 +77,7 @@
         <version>2.2</version>
         <configuration>
           <port>8080</port>
-          <path>/myforum</path>
+          <path>/</path>
         </configuration>
       </plugin>
     </plugins>
